--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/harsha.png-modified.png" alt="lagging to load image :("></td>
+            <td><img src="harsha.png-modified.png" alt="lagging to load image :("></td>
             <td><h1>HARSHA CHAITANYA</h1>
                 <p><em>yet to <strong>decide</strong></em></p>
                 <p>im the one who knocks</p></td>
